source/less/blocks/form.less
.form__list {
  .list-reset();
  padding-top: 15px;

  &--apps {
    padding-top: 12px;
  }
}

.form__legend {
  min-width: 10px;
  margin: 0;
  padding: 15px 20px 18px 20px;

  font-size: 14px;
  font-weight: 400;
  line-height: 18px;
  text-align: center;
  text-transform: uppercase;
  color: @text-blood;

  flex-grow: 0;
  flex-shrink: 1;
  flex-basis: auto;

  &--contact {
    display: none;
  }
}

.form__label {
  display: inline-block;
  padding: 10px 20px 5px 22px;

  font-size: 14px;
  font-weight: 400;
  line-height: 30px;
  text-transform: uppercase;
  color: @text-blood;
}

.form__label-in-list {
  position: relative;

  display: inline-block;
  padding: 11px 0 9px 10px;

  font-size: 18px;
  font-weight: 400;
  line-height: 30px;
  color: @bg-darkblue;
}

.form__checkbox {
  padding-left: 70px;
  margin-bottom: 32px;
  outline: none;

  &::before {
    content: "";
    position: absolute;
    top: calc(50% - 16px);
    left: 0;

    width: 36px;
    height: 36px;

    border: 2px solid @bg-gray-dark;
    background-color: @white;
  }

  &:hover::before,
  &:focus::before {
    border-color: @bg-darkblue;
  }

  &:active::before {
    border-color: @text-blood;
  }
}

.form__check:checked + .form__checkbox::after {
  content: "";
  position: absolute;
  top: 18px;
  left: 8px;

  width: 22px;
  height: 10px;

  border-left: 2px solid @text-blood;
  border-bottom: 2px solid @text-blood;

  transform: rotate(-45deg);
}

.form__radio {
  padding-left: 70px;
  margin-bottom: 25px;
  outline: none;

  &::before {
    content: "";
    position: absolute;
    top: calc(50% - 18px);
    left: 0;

    width: 36px;
    height: 36px;

    border: 2px solid @bg-gray-dark;
    background-color: @white;

    border-radius: 50%;
  }

  &:hover::before,
  &:focus::before {
    border-color: @bg-darkblue;
  }

  &:active::before {
    border-color: @text-blood;
  }
}

.form__check:checked + .form__radio::after {
  content: "";
  position: absolute;
  top: 18px;
  left: 11.5px;

  width: 13px;
  height: 13px;

  background-color: @text-blood;
  border-radius: 50%;
}

.form__text-field {
  display: block;
  width: 100%;
  padding: 14px 20px 15px 20px;
  margin-bottom: 6px;

  font-size: 18px;
  line-height: 30px;

  color: @bg-darkblue;

  border: 2px solid @bg-gray-dark;
  outline: none;

  &:hover,
  &:focus {
    border-color: @bg-darkblue;
  }

  &:active {
    border-color: @text-blood;
  }

  // &:invalid {
  //   background-color: fade(@text-blood, 10);
  //   border-color: fade(@text-blood, 20);
  // }
}

.form__textarea {
  display: inline-block;
  width: 100%;
  min-height: 200px;
  margin-bottom: 42px;
  padding: 14px 18px 14px 18px;

  font-size: 18px;
  line-height: 30px;
  color: @bg-darkblue;

  border: 2px solid @bg-gray-dark;
  outline: none;

  &:hover,
  &:focus {
    border-color: @bg-darkblue;
  }

  &:active {
    border-color: @text-blood;
  }
}

.form__submit {
  width: 100%;
  padding: 20px;

  font-weight: 700;
  text-align: center;
  text-transform: uppercase;
  color: @white;

  border-radius: 3px;
  border-style: solid;
  border-width: 2px;
  border-color: @wood-green;
  background-color: @wood-green;
  outline: none;

  &:hover:not(:disabled),
  &:focus:not(:disabled),
  &:active:not(:disabled) {
    border-color: @wood-green-hover;
    background-color: @wood-green-hover;
  }

  &:active:not(:disabled) {
    color: fade(@white, 30);
  }

  &:disabled {
    border-color: @bg-gray-dark;
    background-color: @bg-gray-dark;
  }
}

.form__submit-note {
  margin-top: 35px;

  font-size: 14px;
  line-height: 30px;
  text-align: center;
  text-transform: uppercase;
  color: @bg-darkblue;

  &--red {
    color: @text-blood;
  }

  &--desktop {
    display: none;
  }
}

@media (min-width: @tablet-width) {
  .form__wrapper-main {
    .wrapper(@tablet-width);
  }

  .form__field-contestant {
    display: flex;
    justify-content: flex-start;
    margin-top: 45px;
  }

  .form__field-contact {
    position: relative;
    display: flex;
    justify-content: flex-start;
    flex-wrap: wrap;

    margin-top: 12px;

    &:first-of-type {
      margin-top: 38px;
    }

    &--phone::after,
    &--email::after {
      content: "";
      position: absolute;
      top: 2px;
      right: 2px;

      width: 60px;
      height: 58px;

      background-color: @bg-gray-dark;
      .background(50%, 50%, auto);
    }

    &--phone::after {
      background-image: url("../img/icon-phone.svg");
    }

    &--email::after {
      background-image: url("../img/icon-mail.svg");
    }
  }

  .form__list {
    padding-top: 15px;

    &--apps {
      padding-top: 40px;
    }

    &--achievement {
      padding-top: 40px;
    }
  }

  .form__label {
    padding: 16px 20px 0  0;

    &--contact {
      padding: 3px 20px 16px 20px;
      order: 1;
    }
  }

  .form__label-in-list {
    position: relative;

    display: block;
    padding: 10px 10px 10px 10px;

    font-size: 18px;
    font-weight: 400;
    line-height: 30px;
    color: @bg-darkblue;
  }

  .form__text-field {
    padding: 14px 18px 15px 18px;
    min-height: 61px;
  }

  .form__legend {
    display: block;
    padding: 0 20px 0 20px;
    margin: 0 auto;

    background-color: white;

    &--apps {
      margin-top: -30px;
    }

    &--contact {
      margin-top: -12px;
    }

    &--achievement {
      margin-top: -30px;
    }

    &--comment {
      margin-top: -50px;
    }
  }

  .form__radio {
    padding-left: 60px;
    margin-bottom: 26px;

    &::before {
      width: 38px;
      height: 38px;
    }
  }

  .form__check:checked + .form__radio::after {
    width: 15px;
    height: 15px;
  }

  .form__checkbox {
    padding-left: 59px;
    margin-bottom: 32px;

    &::before {
      top: 6px;
      left: 0;
      width: 38px;
      height: 38px;
    }
  }

  .form__check:checked + .form__checkbox::after {
    top: 16px;
    left: 9px;
  }

  .form__textarea {
    padding: 13px 18px 13px 18px;
    margin-top: 40px;
    margin-bottom: 35px;

    min-height: 192px;
  }

  .form__submit {
    width: 300px;
  }

  .form__submit-note {
    margin: 0;
  }
}

@media (min-width: @desktop-width) {
  .form__list {
    padding-top: 15px;

    &--apps {
      width: 280px;
      margin: 0 auto;
      padding-top: 16px;
    }

    &--achievement {
      display: flex;
      flex-wrap: wrap;
      justify-content: flex-start;

      padding-top: 20px;
    }
  }

  .form__option-group {
    flex-basis: 260px;

    &:nth-child(1) {
      flex-basis: 280px;
    }

    &:nth-child(3n-1) {
      margin-left: 35px;
      margin-right: 35px;
    }
  }

  .form__field-contestant {
    margin-top: 46px;

    &:last-of-type {
      margin-bottom: 0;
    }
  }

  .form__field-contact,
  .form__field-contact:first-of-type {
    width: 375px;
    margin-top: 35px;
  }

  .form__textarea {
    min-height: 130px;
    margin-bottom: 42px;
    margin-top: 35px;
  }

  .form__submit-note--desktop {
    display: inline;
  }

  .form__legend {
    display: block;

    width: auto;
    padding: 0 20px 0 20px;
    margin: 0 auto;

    background-color: white;

    &--apps {
      margin-top: -30px;
      margin-bottom: 25px;
    }

    &--contact {
      margin-top: -10px;
    }

    &--achievement {
      margin-top: -30px;
      margin-bottom: 18px;
      margin-left: 203px;
    }

    &--comment {
      margin-top: -45px;
      margin-bottom: 0;
    }
  }

  .form__label--contact {
    padding: 3px 20px 14px 20px;
    order: 1;
  }

  .form__radio {
    padding-left: 57px;
    margin-bottom: 24px;
  }
}

